--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
   color: #333;
   text-align: center;
-  font-family: arial;
+  font-family: "comic Sans";
   font-size: 16px;
   margin: 0;
   padding: 0;
