--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,29 +1,47 @@
 body {
+  background: #1e1f24;
   color: #333;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial;
   font-size: 16px;
   margin: 0;
   padding: 0;
 }
+
 #cabecera {
-  background-color: #33a;
-  font-weight: bold;
+  background: #37488b;
+  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
   color: white;
-  padding: 0.5rem;
+  font-weight: bold;
+  margin: 0;
+  padding: 0.5em;
 }
+
+#cabecera #logo {
+  width: 20px;
+  vertical-align: middle;
+}
+
+#cabecera #tagline {
+  padding: 0 0 0 1em;
+  font-weight: normal;
+  font-size: 0.8em;
+}
+
 #container {
-  margin-top: 50px !important;
   width: 70%;
-  text-align: center;
+  padding: 0;
+  text-align: left;
   border: 1px solid #ddd;
   margin: 0 auto;
-  -webkit-box-shadow: 10px 10px 69px 11px rgba(0, 0, 0, 0.56);
-  -moz-box-shadow: 10px 10px 69px 11px rgba(0, 0, 0, 0.56);
-  box-shadow: 10px 10px 69px 11px rgba(0, 0, 0, 0.56);
 }
+
 #container h1 {
   font-size: 20px;
+}
+#post {
+  background: white;
+  padding: 1em;
 }
 
 #footer {
